--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,17 @@ button {
     cursor: pointer;
 }
 
+main {
+    margin: 20px;
+}
+
+.btn {
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    padding: 8px 20px;
+    font-weight: 600;
+}
+
 .modal-backdrop {
     position: fixed;
     inset: 0;
@@ -32,7 +43,7 @@ button {
     opacity: 0;
     visibility: hidden;
     transition: opacity, visibility;
-    transition-duration: 0.5s;
+    transition-duration: 0.3s;
 }
 
 .modal-backdrop.show {
@@ -47,7 +58,7 @@ button {
     border-radius: 10px;
     background: #fff;
     transform: scale(0);
-    transition: scale 0.5s;
+    transition: transform 0.3s;
 }
 
 .modal-backdrop.show .modal-container {
@@ -56,8 +67,8 @@ button {
 
 .modal-close {
     position: absolute;
-    top: 6px;
-    right: 6px;
+    top: 10px;
+    right: 10px;
     width: 30px;
     height: 30px;
     border-radius: 50%;
